--- a/tcc-frontend/src/components/Layout/layout.css
+++ b/tcc-frontend/src/components/Layout/layout.css
@@ -14,50 +14,27 @@
   box-sizing: border-box;
 }
 
+
+
 .layout {
-  height: 100vh;
-}
-
-.header {
-  height: 60px;
-  background: var(--cor-primaria);
-  color: var(--texto-claro);
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0px 25px;
+  flex-direction: column;
+  min-height: 100vh; /* Ocupa no MÍNIMO a tela inteira */
+  width: 100%;
 }
 
-.body {
+.body { 
   display: flex;
-  height: calc(100vh - 60px);
+  flex: 1;
+  height: auto; 
+  background-color: black;
 }
-
-.sidebar {
-  width: 220px;
-  background: var(--fundo-escuro);
-  color: white;
-  padding: 20px 0px;
-}
-
-.sidebar div {
-  padding: 10px;
-  list-style: none;
-  margin-bottom: 5px;
-  transition: 0.2s;
-  cursor: pointer;
-}
-
-.sidebar div:hover{
-  color: rgb(255, 102, 0);
-  background-color: #d86e3118;
-}
-
-
 
 
 .content {
   flex: 1;
   padding: 20px;
   background: var(--fundo-claro);
+  background-color: #f5f5f5;
+  overflow-y: auto;
 }
