--- a/tcc-frontend/src/pages/perfilUser/perfil.css
+++ b/tcc-frontend/src/pages/perfilUser/perfil.css
@@ -7,13 +7,14 @@
     border-radius: 15px;
     padding: 20px;
     background-color: white;
+    margin-bottom: 20px;
 }
 
 .photoProfile > img{
     background-color: rgb(230, 230, 230);
     border-radius: 50%;
     border: 4px solid var(--cor-primaria);
-    width:150px;
+    width: 150px;
     height: 150px;
 }
 
@@ -24,8 +25,35 @@
 }
 
 
-.prefilInfo{
+.editProfile{
+    width: auto;
+    height: auto;
+    border: none;
+    background-color: var(--cor-primaria);
+    align-items: end;
+    justify-content: start; 
+    padding: 5px 12px;
+    border-radius: 7px;
+    color: white;
 }
 
+
+
+
+
+.info{
+    display: grid;
+    grid-template-columns: 1fr 1fr ;
+    gap: 20px;
+    
+}
    
+.divProfile{
+    border: 1px solid var(--cor-primaria);
+    border-radius: 15px;
+    padding: 20px;
+    background-color: white;
+    margin-bottom: 20px;
+}
+
 
